docs(perf): lock compact owner 256 validation